--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dxos/crypto",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.0",
   "description": "Basic crypto key utils",
   "main": "dist/es/index.js",
   "scripts": {
