--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0-beta.1",
   "description": "Basic crypto key utils",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "main": "dist/es/index.js",
+  "types": "dist/es/index.d.ts",
   "scripts": {
-    "build": "babel ./src --out-dir ./dist/es --ignore \"**/*.test.js\" --source-maps inline",
+    "build": "tsc",
     "build:watch": "yarn run build --watch",
     "clean": "rm -rf dist",
     "coverage": "npm test -- --coverage",
@@ -21,7 +23,8 @@
   "author": "",
   "license": "GPL-3.0",
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "preset": "ts-jest/presets/js-with-ts"
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
@@ -29,25 +32,18 @@
     "hypercore-crypto": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-eslint": "^10.0.2",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.0",
-    "babel-plugin-add-module-exports": "^1.0.0",
+    "@typescript-eslint/parser": "^3.9.0",
     "coveralls": "^3.0.7",
-    "jest": "^24.5.0",
-    "semistandard": "14.2.0"
+    "jest": "^26.4.0",
+    "semistandard": "14.2.0",
+    "ts-jest": "^26.2.0",
+    "typescript": "^3.9.7"
   },
   "publishConfig": {
     "access": "public"
   },
   "semistandard": {
-    "parser": "babel-eslint",
+    "parser": "@typescript-eslint/parser",
     "env": [
       "jest",
       "node",
