--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
     "lint": "semistandard 'src/**/*.js'",
     "prepublishOnly": "npm run test && npm run build",
-    "test": "jest --verbose --passWithNoTests",
+    "test": "jest --rootDir=./src --verbose --passWithNoTests",
     "posttest": "npm run lint"
   },
   "keywords": [],
@@ -37,7 +37,7 @@
     "jest": "^26.4.0",
     "semistandard": "14.2.0",
     "ts-jest": "^26.2.0",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.0"
   },
   "publishConfig": {
     "access": "public"
