--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
   "types": "dist/es/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "build:watch": "yarn run build --watch",
-    "clean": "rm -rf dist",
     "coverage": "npm test -- --coverage",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
-    "lint": "semistandard 'src/**/*.js'",
+    "lint": "eslint 'src/**/*.ts'",
     "prepublishOnly": "npm run test && npm run build",
-    "test": "jest --rootDir=./src --verbose --passWithNoTests",
-    "posttest": "npm run lint"
+    "test": "jest --rootDir=./src --verbose --passWithNoTests"
   },
   "keywords": [],
   "author": "",
@@ -32,22 +29,17 @@
     "hypercore-crypto": "^1.0.0"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^3.9.0",
+    "@dxos/eslint-plugin": "^1.0.8",
     "coveralls": "^3.0.7",
+    "eslint": "^7.12.1",
     "jest": "^26.4.0",
-    "semistandard": "14.2.0",
     "ts-jest": "^26.2.0",
     "typescript": "^4.0.0"
   },
   "publishConfig": {
     "access": "public"
   },
-  "semistandard": {
-    "parser": "@typescript-eslint/parser",
-    "env": [
-      "jest",
-      "node",
-      "browser"
-    ]
+  "eslintConfig": {
+    "extends": "plugin:@dxos/recomended"
   }
 }
