--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dxos/crypto",
-  "version": "1.0.1",
+  "version": "1.0.1-alpha.0",
   "description": "Basic crypto key utils",
   "files": [
     "dist",
