--- a/.github/workflows/beta-publish.yml
+++ b/.github/workflows/beta-publish.yml
@@ -22,7 +22,7 @@ jobs:
           yarn build
           yarn test
           git reset --hard
-          VERSION=`cat package.json | grep '"version":' | awk '{ print $2 }' | sed 's/[",]//g'` 
+          VERSION=`cat package.json | grep '"version":' | awk '{ print $2 }' | sed 's/[",]//g' | cut -d'-' -f1`
           npm version ${VERSION}-beta.0
           git push
           git tag -f "v$VERSION-beta.0"
